# codingame

./: .gitignore  .tags  README.md
Spring_Challenge_2020/: pac.py
autotools/hello_example/: .gitignore
coders_strike_back/: pod.c
codewars/: .tags
codewars/kata/: .gitignore  add_files.sh  configure.ac  duplicate_encoder  exes_and_ohs  exes_and_ohs.cpp  sum_of_numbers.cpp  which_are_in.cpp
codewars/kata/src/: .gitignore  Makefile.am  bit_counting.cpp  decomp.cpp  duplicate_encoder.cpp  egiptian_fractions.cpp  enoughisenough.cpp  fibonacci  fibonacci.cpp  findOdd.cpp  findnextsquare.cpp  greed_is_good.cpp  is_square.cpp  likes.cpp  middle_char.cpp  mult_table.cpp  multiplication_table.cpp  prime_decomp  prime_decomp.cpp  proper_fractions.cpp  same_arrays.cpp  sum_of_digits_digital_root.cpp  sum_of_fractions  sum_of_fractions.cpp  ten_minute_walk.cpp  tickets.cpp  tribonacci.cpp  two_sum.cpp  valid_braces.cpp  which_are_in.cpp
codingame/Spring_Challenge_2020/: 1.c
codingame/code4life/: robot1.cpp  robot2.cpp
codingame/coders_strike_back/: pod.c
codingame/ghost_in_the_cell/: ghost1.py  ghost2.py  ghost3  ghost3.cpp  test_vector_3  test_vector_4  test_vector_5
codingame/puzzles/: .gitignore  code_vs_zombies.py  defibrillators.py  ghost_legs.py  huffman_code.py
codingame/puzzles/the_labyrinth/: the_labyrinth.cpp
coursera/crafting_quality_code/week1/: palindrome.py
coursera/crafting_quality_code/week1/restaurant_recomendations/: restaurant_recomendations.py
ea_test/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
ea_test/autom4te.cache/: output.1  requests  traces.0  traces.1
ea_test/src/: .gitignore  Makefile  Makefile.in  ea.cpp
ghost_in_the_cell/: test_vector_1  test_vector_2
other/: gol.c
primer/: chapter_questions.txt
primer/examples/: README
primer/examples/src/: .gitignore  .tags  ea  ea.cpp  hello  hello.cpp  lambda  lambda.cpp  smart_pointers  smart_pointers.cpp  swapping  swapping.cpp  tail_recursion  tail_recursion.cpp  threads1  threads1.cpp  threads2.cpp  waitting  waitting.cpp
puzles/: horses_racing_duals.c  mars_lander_2.c  mime_types.c  mime_types.py
puzzles/: .gitignore  code_vs_zombies.py  horses_racing_duals.c  mime_types.c  recangle_partition.test1  recangle_partition.test3  recangle_partition.test4  rectangle_partition.cpp
puzzles/rectangle_partition/: recangle_partition.test2
shared_mem/: .gitignore  Makefile  anom_cond  cons-prod  inter_mutex  main  msgq  shared_class  shared_list  shared_vector
shared_mem/src/: anom_cond.cpp  consumer-producer.cpp  inter_mutex.cpp  main.cpp  msgq.cpp  shared_chat.cpp  shared_class.cpp  shared_list.cpp  shared_vector.cpp
sql_tests/: basic_simple  product_table_ex.sql
