bin_PROGRAMS = same_arrays tickets tribonacci sum_of_numbers bit_counting which_are_in valid_braces middle_char valid_parentheses sum_of_digits_digital_root duplicate_encoder findnextsquare ten_minute_walk decomp enoughisenough findOdd exes_and_ohs multiplication_table mult_table likes greed_is_good is_square
same_arrays_SOURCES = same_arrays.cpp
tickets_SOURCES = tickets.cpp
tribonacci_SOURCES = tribonacci.cpp
sum_of_numbers_SOURCES = sum_of_numbers.cpp
bit_counting_SOURCES = bit_counting.cpp
which_are_in_SOURCES = which_are_in.cpp
valid_braces_SOURCES = valid_braces.cpp
middle_char_SOURCES = middle_char.cpp
valid_parentheses_SOURCES = valid_parentheses.c
sum_of_digits_digital_root_SOURCES = sum_of_digits_digital_root.cpp
duplicate_encoder_SOURCES = duplicate_encoder.cpp
findnextsquare_SOURCES = findnextsquare.cpp
ten_minute_walk_SOURCES = ten_minute_walk.cpp
decomp_SOURCES = decomp.cpp
enoughisenough_SOURCES = enoughisenough.cpp
findOdd_SOURCES = findOdd.cpp
exes_and_ohs_SOURCES = exes_and_ohs.cpp
multiplication_table_SOURCES = multiplication_table.cpp
mult_table_SOURCES = mult_table.cpp
likes_SOURCES = likes.cpp
greed_is_good_SOURCES = greed_is_good.cpp
is_square_SOURCES = is_square.cpp
