bin_PROGRAMS = tribonacci two_sum duplicate_encoder valid_braces sum_of_digits_digital_root fibonacci multiplication_table sum_of_fractions middle_char findOdd same_arrays bit_counting proper_fractions tickets greed_is_good which_are_in is_square decomp egiptian_fractions prime_decomp likes sum_of_numbers mult_table findnextsquare ten_minute_walk exes_and_ohs enoughisenough
tribonacci_SOURCES = tribonacci.cpp
two_sum_SOURCES = two_sum.cpp
duplicate_encoder_SOURCES = duplicate_encoder.cpp
valid_braces_SOURCES = valid_braces.cpp
sum_of_digits_digital_root_SOURCES = sum_of_digits_digital_root.cpp
fibonacci_SOURCES = fibonacci.cpp
multiplication_table_SOURCES = multiplication_table.cpp
sum_of_fractions_SOURCES = sum_of_fractions.cpp
middle_char_SOURCES = middle_char.cpp
findOdd_SOURCES = findOdd.cpp
same_arrays_SOURCES = same_arrays.cpp
bit_counting_SOURCES = bit_counting.cpp
proper_fractions_SOURCES = proper_fractions.cpp
tickets_SOURCES = tickets.cpp
greed_is_good_SOURCES = greed_is_good.cpp
which_are_in_SOURCES = which_are_in.cpp
is_square_SOURCES = is_square.cpp
decomp_SOURCES = decomp.cpp
egiptian_fractions_SOURCES = egiptian_fractions.cpp
prime_decomp_SOURCES = prime_decomp.cpp
likes_SOURCES = likes.cpp
sum_of_numbers_SOURCES = sum_of_numbers.cpp
mult_table_SOURCES = mult_table.cpp
findnextsquare_SOURCES = findnextsquare.cpp
ten_minute_walk_SOURCES = ten_minute_walk.cpp
exes_and_ohs_SOURCES = exes_and_ohs.cpp
enoughisenough_SOURCES = enoughisenough.cpp
